2006-02-13  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/26092
	* gimplify.c (gimplify_call_expr): Don't call get_callee_fndecl
	twice if decl is a builtin.  When trying again, call get_callee_fndecl
	first to verify it is still a builtin.

2006-02-11  Jason Merrill  <jason@redhat.com>

	PR tree-opt/24365
	* tree-inline.c (declare_return_variable): Just don't use the
	modify target if it's a gimple complex reg and the return slot
	isn't.

2006-02-11  David Edelsohn  <edelsohn@gnu.org>

	* doc/invoke.texi (xl-compat): Document conversion and support
	routine names.

2006-02-11  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* doc/contrib.texi: Update my entry.

2006-02-11  Jakub Jelinek  <jakub@redhat.com>

	PR target/25864
	Backport from mainline

	2006-02-06  Aldy Hernandez  <aldyh@redhat.com>

	* config/s390/s390.c (TARGET_MANGLE_FUNDAMENTAL_TYPE): Define.
	(s390_mangle_fundamental_type): New.
	* config/s390/linux.h (TARGET_ALTERNATE_LONG_DOUBLE_MANGLING):
	Define.

	* config/alpha/alpha.c (TARGET_MANGLE_FUNDAMENTAL_TYPE): Define.
	(alpha_mangle_fundamental_type): New.
	* config/alpha/linux.h (TARGET_ALTERNATE_LONG_DOUBLE_MANGLING):
	Define.

	* config/sparc/linux.h (TARGET_ALTERNATE_LONG_DOUBLE_MANGLING):
	Define.
	* config/sparc/linux64.h (TARGET_ALTERNATE_LONG_DOUBLE_MANGLING):
	Define.
	* config/sparc/sparc.c (TARGET_MANGLE_FUNDAMENTAL_TYPE): Define.
	(sparc_mangle_fundamental_type): New.

2006-02-10  Jakub Jelinek  <jakub@redhat.com>

	PR target/25864
	Backport from mainline

	2006-02-04  David Edelsohn  <edelsohn@gnu.org>
		    Jakub Jelinek  <jakub@redhat.com>

	* config/rs6000/rs6000.c (rs6000_mangle_fundamental_type): Mangle
	IBM extended float format long double as "g" on powerpc*-linux.

	2006-02-01  Jakub Jelinek  <jakub@redhat.com>

	* config/rs6000/sysv4.h (SUBTARGET_OVERRIDE_OPTIONS): For
	-msoft-float -mlong-double-128 only issue a warning, but don't
	swich to DFmode long double.

	2006-01-28  David Edelsohn  <edelsohn@gnu.org>
